Make project compatible with Java 8
- Downgrade Spring Boot from 3.5.14 to 2.7.18 (last branch supporting Java 8)
- Set java.version to 1.8 in pom.xml
- Replace Java records (CopyResult, Entry, CopyResponse) with plain classes; add equals/hashCode/toString to Entry for test equality checks
- Replace Path.of() (Java 11) with Paths.get()
- Replace URLDecoder.decode(str, Charset) (Java 10) with URLDecoder.decode(str, "UTF-8")
- Replace Files.readString/writeString (Java 11) in tests with readAllBytes/write
- Replace List.of() (Java 9) in tests with Arrays.asList()
- Update CI workflow to use JDK 8

https://claude.ai/code/session_01FDHrEhgakS6tfPBivPBgwe